# dspy-guardrails

./: .gitignore  AGENTS.md  CHANGELOG.md  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  SECURITY.md  example.py  pyproject.toml
.github/: contributing.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.opencode/command/: openspec-apply.md
.opencode/command/ralphspec/: create-feature.md  generate-prd.md
docs/: GUARDRAIL_TYPES.md  MIGRATION_GUIDE.md  QUICKSTART.md
dspy_guardrails/: __init__.py  factory.py  guardrail.py
dspy_guardrails/core/: __init__.py  config.py  exceptions.py  manager.py
dspy_guardrails/guardrails/: __init__.py  jailbreak.py  keywords.py  nsfw.py  pii.py  prompt_injection.py  secret_keys.py  topic.py
dspy_guardrails/utils/: dspy_config.py
notebooks/: 001-topic.py  002-nsfw.py  003-jailbreak.py  004-pii.py  005-keywords.py  005-prompt-injection.py  006-keywords.py  007-secret-keys.py
openspec/: project.md
openspec/changes/archive/2025-11-24-2025-11-24-add-global-aggregation-run-api/: proposal.md  tasks.md
openspec/changes/archive/2025-11-24-2025-11-24-add-global-aggregation-run-api/specs/package-api/: spec.md
openspec/changes/archive/2025-11-24-2025-11-24-change-guardrail-functions-to-classes/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-24-2025-11-24-change-guardrail-functions-to-classes/specs/package-api/: spec.md
openspec/changes/archive/2025-11-24-2025-11-24-create-guardrail-module/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-24-2025-11-24-create-guardrail-module/specs/package-api/: spec.md
openspec/changes/archive/2025-11-24-2025-11-24-simplify-run-api/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-24-2025-11-24-unify-example-run-api/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-24-2025-11-24-unify-example-run-api/specs/package-api/: spec.md
openspec/changes/archive/2025-11-24-2025-11-24-update-readme-bulk-run-pattern/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-24-2025-11-24-update-readme-bulk-run-pattern/specs/package-api/: spec.md
openspec/changes/archive/2025-11-24-add-simple-quickstart-docs/: proposal.md  tasks.md
openspec/changes/archive/2025-11-24-add-simple-quickstart-docs/specs/documentation/: spec.md
openspec/changes/archive/2025-11-24-cleanup-deprecated-code-for-production/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-24-cleanup-deprecated-code-for-production/specs/package-api/: spec.md
openspec/changes/archive/2025-11-24-create-package/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-24-create-package/specs/package-api/: spec.md
openspec/changes/archive/2025-11-24-deprecate-guardrail-manager/: proposal.md  tasks.md
openspec/changes/archive/2025-11-24-improve-guardrail-manager-api/: proposal.md  tasks.md
openspec/changes/archive/2025-11-24-improve-guardrail-manager-api/specs/package-api/: spec.md
openspec/changes/archive/2025-11-24-infer-single-result-run-api/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-24-infer-single-result-run-api/specs/package-api/: spec.md
openspec/changes/archive/2025-11-24-make-dspy-config-user-controlled/: proposal.md  tasks.md
openspec/changes/archive/2025-11-24-make-dspy-config-user-controlled/specs/package-api/: spec.md
openspec/changes/archive/2025-11-24-simplify-run-return-type/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-24-simplify-run-return-type/specs/package-api/: spec.md
openspec/changes/create-package/: tasks.md
openspec/specs/documentation/: spec.md
openspec/specs/package-api/: simplified-run-api-delta.md  spec.md
src/dspy_guardrails/: __init__.py  guardrail.py
src/dspy_guardrails/core/: base.py  config.py
src/dspy_guardrails/guardrails/: __init__.py  gibberish.py  grounding.py  jailbreak.py  keywords.py  language.py  nsfw.py  pii.py  prompt_injection.py  secret_keys.py  tone.py  topic.py  toxicity.py
tests/: conftest.py  test_basic.py  test_guardrail_gibberish.py  test_guardrail_grounding.py  test_guardrail_jailbreak.py  test_guardrail_keywords.py  test_guardrail_language.py  test_guardrail_nsfw.py  test_guardrail_pii.py  test_guardrail_prompt_injection.py  test_guardrail_secret_keys.py  test_guardrail_tone.py  test_guardrail_topic.py  test_guardrail_toxicity.py  test_guardrail_types.py  test_smoke.py
