[project]
name = "dspy-guardrails"
version = "0.1.0"
description = "DSPy-based guardrails for AI content moderation and security"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "DSPy Guardrails Team" }]
keywords = [
  "dspy",
  "guardrails",
  "ai",
  "moderation",
  "security",
  "content-filtering",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "altair>=6.0.0",
  "dspy>=3.0.4",
  "duckdb>=1.4.2",
  "marimo[mcp]>=0.18.0",
  "mcp>=1.22.0",
  "nbformat>=5.10.4",
  "openai>=2.8.1",
  "polars>=1.35.2",
  "pyarrow>=22.0.0",
  "pydantic>=2.12.4",
  "pytest>=9.0.1",
  "python-dotenv>=1.2.1",
  "python-lsp-server>=1.13.2",
  "ruff>=0.14.6",
  "sqlglot>=28.0.0",
  "vegafusion>=2.0.3",
  "vl-convert-python>=1.8.0",
  "watchdog>=6.0.0",
  "websockets>=15.0.1",
]

[dependency-groups]
dev = ["poethepoet>=0.37.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dspy_guardrails*"]

[tool.poe.tasks]
clean = "sh -c 'uvx isort ./dspy_guardrails && uvx ruff check ./dspy_guardrails && uvx ruff format ./dspy_guardrails'"
sort = "uvx isort ."
lint = "uvx ruff check ."
format = "uvx ruff format ."
