[project]
name = "dspy-guardrails"
version = "0.1.0"
description = "DSPy-based guardrails for AI content moderation and security"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Edward Boswell", email = "thememium@gmail.com" }]
keywords = [
  "dspy",
  "guardrails",
  "ai",
  "moderation",
  "security",
  "content-filtering",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "altair>=6.0.0",
  "dspy>=3.0.4",
  "duckdb>=1.4.2",
  "marimo[mcp]>=0.18.0",
  "mcp>=1.22.0",
  "nbformat>=5.10.4",
  "openai>=2.8.1",
  "polars>=1.35.2",
  "pyarrow>=22.0.0",
  "pydantic>=2.12.4",
  "python-dotenv>=1.2.1",
  "python-lsp-server>=1.13.2",
  "sqlglot>=28.0.0",
  "vegafusion>=2.0.3",
  "vl-convert-python>=1.8.0",
  "watchdog>=6.0.0",
  "websockets>=15.0.1",
]

[project.scripts]
dspy_guardrails = "dspy_guardrails:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "deptry>=0.24.0",
  "isort>=8.0.1",
  "poethepoet>=0.42.1",
  "pytest>=9.0.2",
  "ruff>=0.15.5",
  "ty>=0.0.21",
  "usechange>=0.1.28",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["dspy_guardrails*"]

[tool.poe.tasks]
clean-full = "sh -c 'uv run isort . && uv run ruff check . --fix && uv run ruff format . && uv run deptry . && uv run ty check'"
clean = "sh -c 'uv run isort . && uv run ruff format .'"
test = "uv run pytest tests/ -v"
sort = "uv run isort ."
lint = "uv run ruff check ."
format = "uv run ruff format ."
deptry = "uv deptry ."
typecheck = "uv run ty check"
release = "uv run usechange release"

[tool.deptry]
ignore = ["DEP002"]
per_rule_ignores = { DEP001 = ["dspy_guardrails"] }
exclude = ["venv", "\\.venv", "tests", "\\.git"]
ignore_notebooks = true
