[project]
name = "dspy-guardrails"
version = "0.1.2"
description = "DSPy-based guardrails for AI content moderation and security"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Edward Boswell", email = "thememium@gmail.com" }]
keywords = [
  "dspy",
  "guardrails",
  "ai",
  "moderation",
  "security",
  "content-filtering",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["dspy>=3.1.3"]

[project.scripts]
dspy_guardrails = "dspy_guardrails:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "deptry>=0.24.0",
  "isort>=8.0.1",
  "poethepoet>=0.42.1",
  "pytest>=9.0.2",
  "ruff>=0.15.5",
  "ty>=0.0.21",
  "usechange>=0.1.28",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["dspy_guardrails*"]

[tool.poe.tasks]
example = "uv run example.py"
clean-full = "sh -c 'uv run isort . && uv run ruff check . --fix && uv run ruff format . && uv run deptry . && uv run ty check'"
clean = "sh -c 'uv run isort . && uv run ruff format .'"
test = "uv run pytest tests/ -v"
sort = "uv run isort ."
lint = "uv run ruff check ."
format = "uv run ruff format ."
deptry = "uv run deptry ."
typecheck = "uv run ty check"
release = "uv run usechange release"

[tool.deptry]
ignore = ["DEP002"]
per_rule_ignores = { DEP001 = ["dspy_guardrails"], DEP003 = ["dspy_guardrails"] }
known_first_party = ["dspy_guardrails"]
exclude = ["venv", "\\.venv", "tests", "\\.git"]
ignore_notebooks = true
